# SearchMyData

./: CLAUDE.md  README.md  igcse_math_tutor_prompt.md  list-data.js  list-manager-docs.html  list-manager.css  list-manager.html  llm-outside.html  sync-spec.md  test-voice-api.sh  voice-api-contract.md
.claude/commands/: page-link.md
gmail-search/: .coverage  .env.example  CLAUDE.md  pyproject.toml
gmail-search/src/: auth.py  connector.py  models.py  search.py
gmail-search/src/gmail_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gmail-search/tests/: test_auth.py  test_connector.py  test_models.py  test_search.py
